improve post_embeddings
